--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
   "main": "src/coldstorage.js",
   "author": "Bjørn Uhre Arnholtz <bjorn.arnholtz@gmail.com>",
   "repository": {
-		"type": "git",
-		"url": "https://github.com/bjornua/coldstorage"
-	},
+    "type": "git",
+    "url": "https://github.com/bjornua/coldstorage"
+  },
   "devDependencies": {
-		"nodeunit": "^0.9.0"
+    "nodeunit": "^0.9.0"
   },
   "dependencies": {
-		"immutable": "^3.6.2"
+    "immutable": "^3.6.2",
+    "lodash": "^3.0.1"
   },
   "scripts": {
-		"test": "nodeunit test.js"
+    "test": "nodeunit src/test.js"
   }
 }
