--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "coldstorage",
   "description": " Immutable dispatcher for the flux architecture",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "license": "MIT",
   "main": "./src/coldstorage.js",
   "files": [
+    "src/coldstorage.js",
     "README.md"
   ],
   "author": "Bjørn Uhre Arnholtz <bjorn.arnholtz@gmail.com>",
